Out with the old, in with the new
Updated user storage to focus more towards SQLite rather than YAML.